--- a/src/app/components/new-contact/new-contact.component.css
+++ b/src/app/components/new-contact/new-contact.component.css
@@ -93,10 +93,10 @@
 
 .new-contact__people, .new-contact__group {
   position: fixed;
-  visibility: hidden;
   display: block;
   top: 0;
   left: 50%;
+  visibility: hidden;
   opacity: 0;
   width: 500px;
   pointer-events: auto;
@@ -113,7 +113,6 @@
   visibility: visible;
   opacity: 1;
   transform: translate(-50%, 100px);
-  transition: transform .3s ease-out, opacity .15s linear;
 }
 
 .new-contact__overlay {
@@ -172,19 +171,21 @@
 }
 
 .new-contact__common__form__container {
-  border-radius: 5px;
-  border: 1px solid #efefef;
   display: flex;
   align-items: center;
-  max-height: 40px;
   justify-content: space-between;
+  max-height: 40px;
+  gap: 12px;
 }
 
 .new-contact__common__form__container input {
-  border: none !important;
+  border: 1px solid #eff1f2 !important;
   outline: none !important;
   flex: 1;
   font-size: 14px;
+  border-radius: 5px;
+  max-height: 40px;
+  min-height: 40px;
   padding: 5px 10px;
 }
 
@@ -195,6 +196,22 @@
   border: none !important;
   outline: none !important;
   font-size: 14px;
+  position: relative;
+}
+
+.new-contact__common__form__container button p {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: max-content;
+  padding: 5px 15px;
+  background: #ccc;
+  font-size: 14px;
+  font-weight: 500;
+  border-radius: 5px;
 }
 
 .new-contact__common__list {
@@ -220,14 +237,13 @@
 }
 
 .new-contact__common__item__avatar {
-  width: 50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 8px;
   overflow: hidden;
-  background: #eff1f2;
   padding: 2px;
 }
 
@@ -239,12 +255,12 @@
 .new-contact__common__item__name {
   font-size: 16px;
   font-weight: 500;
-  margin: 5px 0 0;
+  margin: 0;
 }
 
 .new-contact__common__item__message {
   font-size: 14px;
-  font-weight: 400;
+  font-weight: 500;
   margin: 0;
 }
 
