update validate register and dark mode

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -17,6 +17,8 @@
           <label for="password">Password</label>
           <input id="password" type="password" formControlName="password" name="password"
                  placeholder="Write your password..." required>
+          <p class="notification" id="notification_password"></p>
+
         </div>
         <div class="form__input">
           <label for="password">Confirm password</label>
