--- a/src/app/components/chat-bar/chat-bar.component.html
+++ b/src/app/components/chat-bar/chat-bar.component.html
@@ -1,5 +1,5 @@
 <div class="box-chat__content__form">
-  <form class="d-flex align-items-center gap-3" (submit)="handleSendChat()" autocomplete="off">
+  <form class="d-flex align-items-end gap-3" (submit)="handleSendChat()">
     <button type="button" class="custom-button button-primary" (click)="toggleEmoji()">
       <i class="fa-solid fa-face-grin"></i>
     </button>
@@ -12,17 +12,17 @@
       <ng-container *ngIf="images.length != 0">
         <div class="box-chat__content__form__box-images">
           <ng-container *ngFor="let image of images">
-            <div class="box-chat__content__form__box-images__item mt-2">
+            <div class="box-chat__content__form__box-images__item">
               <img id="image" src="{{image.url}}" alt="">
-              <a  class="box-chat__content__form__box-images__item-remove" (click)="removeFile(image.id)" >
+              <button class="box-chat__content__form__box-images__item-remove" (click)="removeFile(image.id)">
                 <i class="fa-solid fa-xmark"></i>
-              </a>
+              </button>
             </div>
           </ng-container>
         </div>
       </ng-container>
-     <input placeholder="Write your message..." type="text" name="message" autocomplete="false"
-             [(ngModel)]="message" (ngModelChange)="changeMessage($event)">
+      <input placeholder="Write your message..." type="text" name="message" [(ngModel)]="message"
+             (ngModelChange)="changeMessage($event)">
     </div>
     <button class="custom-button send-button" type="submit">
       <i class="fa-solid fa-paper-plane"></i>
