--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -247,29 +247,29 @@
 .box-chat__content__form__input {
   flex: 1;
 }
-/*file images*/
+
 .box-chat__content__form__box-images {
   display: flex;
   flex-wrap: wrap;
-  min-height: 40px;
   width: 100%;
   background-color: #eff1f2;
-  border-radius: 50px;
-  padding: 10px 24px;
+  border-radius: 8px;
+  padding: 12px;
   margin-bottom: 10px;
 }
+
 .box-chat__content__form__box-images__item {
   position: relative;
-  width: 60px;
-  margin-right: 10px;
+  height: 80px;
 }
+
 .box-chat__content__form__box-images__item-remove {
   display: flex;
   justify-content: center;
   align-items: center;
   position: absolute;
-  width: 18px;
-  height: 18px;
+  width: 20px;
+  height: 20px;
   top: -7px;
   right: -7px;
   color: #ff4e2b;
@@ -277,14 +277,17 @@
   border: 1px solid #ff4e2b;
   background-color: #eff1f2;
 }
+
+.box-chat__content__form__box-images__item img {
+  width: auto;
+  height: 100%;
+  border-radius: 8px;
+}
+
 .box-chat__content__form__box-images__item-remove i {
   font-size: 13px;
 }
-.box-chat__content__form__box-images__item img {
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
-}
+
 /*end images*/
 
 
@@ -299,6 +302,7 @@
   width: 100%;
   font-size: 16px;
   /*color: #647589;*/
+  max-height: 42px;
 }
 
 .box-chat__group-button {
