--- a/src/app/components/search-message/search-message.component.html
+++ b/src/app/components/search-message/search-message.component.html
@@ -2,7 +2,16 @@
   <i class="fa-solid fa-magnifying-glass"></i>
 </button>
 <div class="box-chat__sidebar__header__search" [ngClass]="isOpenedSearch ? 'show':'hidden'">
-  <button type="button"><i class="fa-solid fa-magnifying-glass"></i></button>
-  <input type="text" placeholder="Search messages...">
+  <button type="button" (click)="searchMessage(valueSearch)"><i class="fa-solid fa-magnifying-glass"></i></button>
+  <input type="text" placeholder="Search messages..." [(ngModel)]="valueSearch">
+  <div class="move-message ">
+    <span style="margin-right: 30px;">{{position}}/{{searching.length}}</span>
+    <button class="up-mess" (click)="changePosition(-1)">
+      <i class="fa-solid fa-arrow-down"></i>
+    </button>
+    <button class="down-mess" (click)="changePosition(1)">
+      <i class="fa-solid fa-arrow-up"></i>
+    </button>
+  </div>
   <button type="button" (click)="toggleSearch()"><i class="fa-solid fa-xmark"></i></button>
 </div>
