--- a/src/app/components/box-chat/box-chat.component.css
+++ b/src/app/components/box-chat/box-chat.component.css
@@ -5,9 +5,14 @@
   flex-direction: column;
   overflow: hidden;
 }
+app-forward{
+  background-color: white;
+  visibility: visible;
+}
 
 .chat-conversation {
-  overflow-y: scroll;
+  /*overflow-y: scroll;*/
+  overflow-x: hidden;
   background-color: #eff7fe;
   height: 100%;
   flex: 1;
@@ -256,7 +261,9 @@
   /*border-bottom-left-radius: 0;*/
   background-color: #1c9dea;
   color: #fff;
+
 }
+
 
 
 .chat-conversation__message-container__message.right {
@@ -265,7 +272,9 @@
   background-color: #e5edf5;
   color: #223645;
   float: right;
+
 }
+
 
 
 .chat-conversation::-webkit-scrollbar {
@@ -283,3 +292,41 @@
 .chat-conversation::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+/*---------------------------forward------------------------------------*/
+/*.forward{*/
+/*  width: 500px;*/
+/*  height: 200px;*/
+/*  !*overflow: fi;*!*/
+/*  background-color: black;*/
+/*  !*position: fixed;*!*/
+/*  !*top: 50%;*!*/
+/*  !*right: 20%;*!*/
+/*}*/
+.new-contact__people, .new-contact__group {
+  position: fixed;
+  display: block;
+  top: 0;
+  left: 50%;
+  visibility: hidden;
+  opacity: 0;
+  width: 500px;
+  pointer-events: auto;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, .2);
+  border-radius: 10px;
+  overflow: hidden;
+  z-index: 100;
+  transform: translate(-50%, 0);
+  transition: transform .3s ease-out, opacity .15s linear;
+}
+
+.new-contact__people.show, .new-contact__group.show {
+  visibility: visible;
+  opacity: 1;
+  transform: translate(-50%, 100px);
+}
+
+
+
+
