--- a/src/app/components/box-chat/box-chat.component.html
+++ b/src/app/components/box-chat/box-chat.component.html
@@ -1,4 +1,4 @@
-<div class="chat-conversation" #boxChat>
+<div class="chat-conversation" #boxChat >
   <ng-container *ngIf="activeRoom">
     <div class="chat-conversation__header">
       <div class="d-flex">
@@ -28,15 +28,15 @@
           <div class="chat-conversation__avatar">
             <img src="/assets/images/user.jpg" alt="avatar">
           </div>
-          <div class="d-flex flex-column gap-0" [ngClass]="message.name === user?.name ? 'align-items-end':''">
+          <div class="d-flex flex-column gap-0 chat-color" [ngClass]="message.name === user?.name ? 'align-items-end':''">
             <div class="chat-conversation__message-container"
                  [ngClass]="message.name === user?.name ? 'flex-row-reverse':''">
               <div class="chat-conversation__message-container__message"
                    [ngClass]="message.name === user?.name ? 'right':'left'" [innerHTML]="message.mes">
               </div>
               <button class="chat-conversation__message-forward"
-                      [ngClass]="message.name === user?.name ? 'right':'left'">
-                <i class="fa-solid fa-share-nodes"></i>
+                      [ngClass]="message.name === user?.name ? 'right':'left'" (click)="getMess(message.mes)">
+                <i class="fa-solid fa-share-nodes" ></i>
                 <p>Forward</p>
               </button>
             </div>
@@ -56,3 +56,4 @@
     <p class="chat-conversation__background__title">Select a chat to read messages</p>
   </div>
 </div>
+
