wait for loading and update toggle emoji

--- a/src/app/components/chat-bar/chat-bar.component.html
+++ b/src/app/components/chat-bar/chat-bar.component.html
@@ -29,6 +29,6 @@
     </button>
     <emoji-mart color="#1c9dea" class="emoji-container" [emojiTooltip]='false' [darkMode]='check()' [skin]='3.0'
                 [showPreview]="false" *ngIf="isEmojiPickerVisible" (emojiSelect)="addEmoji($event)"></emoji-mart>
+    <div class="overlay-emoji" (click)="toggleEmoji()" [ngClass]="isEmojiPickerVisible ? 'show':'hidden'"></div>
   </form>
 </div>
-<div class="overlay-emoji" (click)="toggleEmoji()"></div>
