--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,36 +1,48 @@
-<div class="d-flex h-100 gap-0">
-  <app-sidebar [user]="user" (logout)="handleLogout()" #sidebar></app-sidebar>
-  <div class="box-chat">
-    <div class="box-chat__sidebar position-relative">
-      <div class="box-chat__sidebar__header">
-        <div class="box-chat__sidebar__header__title">
-          <h3>Recent</h3>
-          <p>Chat from your friends 😘</p>
-        </div>
-        <button class="custom-button button-light"
-                (click)=" this.sidebar['showSidebar'] = !this.sidebar['showSidebar']">
-          <i class="fa-solid fa-expand"></i>
-        </button>
-      </div>
-      <div class="box-chat__sidebar__header">
-        <div class="box-chat__sidebar__header__title">
-          <h3>Chats</h3>
-          <p>Start New Conversation</p>
-        </div>
-        <app-search-chat (searchChat)="searchChat($event)"></app-search-chat>
-      </div>
-      <app-group-chat [rooms]="rooms" [activeRoom]="activeRoom" [searching]="searching"
-                      (changeRoom)="changeRoom($event)"
-                      class="d-flex flex-column overflow-hidden"></app-group-chat>
-      <app-new-contact [rooms]="rooms" (addPeople)="addPeople($event)"
-                       (joinRoom)="joinRoom($event)" (createRoom)="createRoom($event)"></app-new-contact>
-    </div>
-    <div class="box-chat__content position-relative">
-      <app-box-chat class="container__chat-conversation" (forwardMessage)="handOpenedForward($event)" [isOpenForward]="isOpenForward" [activeRoom]="activeRoom" [user]="user"  [rooms]="rooms"  (loadHistory)="loadHistory()" [dataRetrieved]="dataRetrieved" ></app-box-chat>
 
-      <app-chat-bar (sendChat)="sendChat($event)"></app-chat-bar>
+<ng-container *ngIf="rooms.length != 0">
+  <div class="d-flex h-100 gap-0">
+    <app-sidebar [user]="user" (logout)="handleLogout()" #sidebar></app-sidebar>
+    <div class="box-chat">
+      <div class="box-chat__sidebar position-relative">
+        <div class="box-chat__sidebar__header">
+          <div class="box-chat__sidebar__header__title">
+            <h3>Recent</h3>
+            <p>Chat from your friends 😘</p>
+          </div>
+          <button class="custom-button button-light"
+                  (click)=" this.sidebar['showSidebar'] = !this.sidebar['showSidebar']">
+            <i class="fa-solid fa-expand"></i>
+          </button>
+        </div>
+        <div class="box-chat__sidebar__header">
+          <div class="box-chat__sidebar__header__title">
+            <h3>Chats</h3>
+            <p>Start New Conversation</p>
+          </div>
+          <app-search-chat (searchChat)="searchChat($event)"></app-search-chat>
+        </div>
+        <app-group-chat [rooms]="rooms" [activeRoom]="activeRoom" [searching]="searching"
+                        (changeRoom)="changeRoom($event)"
+                        class="d-flex flex-column overflow-hidden"></app-group-chat>
+        <app-new-contact [rooms]="rooms" (addPeople)="addPeople($event)"
+                         (joinRoom)="joinRoom($event)" (createRoom)="createRoom($event)"></app-new-contact>
+      </div>
+      <div class="box-chat__content position-relative">
+        <app-box-chat class="container__chat-conversation" (forwardMessage)="handOpenedForward($event)" [isOpenForward]="isOpenForward" [activeRoom]="activeRoom" [user]="user"  [rooms]="rooms"  (loadHistory)="loadHistory()" [dataRetrieved]="dataRetrieved" ></app-box-chat>
+
+        <app-chat-bar (sendChat)="sendChat($event)"></app-chat-bar>
+      </div>
+    </div>
+  </div>
+  <app-forward [rooms]="rooms" [isOpenForward]="isOpenForward"  (closeForward)="closeForward()" [content]="forwardMessage" (sendChat)="handleForwardChat($event)"></app-forward>
+</ng-container>
+<div class="wrapper">
+  <div class="container">
+    <div class="col-12">
+      <div class="box-img ">
+        <img src="https://chitchat-react.vercel.app/assets/images/logo/logo_big.png" alt="">
+      </div>
+      <p class="text-center pt-3 text-muted text-24"> Simple, secure messaging for fast connect to world...!</p>
     </div>
   </div>
 </div>
-<app-forward [rooms]="rooms" [isOpenForward]="isOpenForward"  (closeForward)="closeForward()" [content]="forwardMessage" (sendChat)="handleForwardChat($event)"></app-forward>
-
