--- a/src/styles.css
+++ b/src/styles.css
@@ -164,5 +164,7 @@ emoji-mart {
   background: #555;
 }
 
-
-
+.box-chat__users__item__message img {
+  height: 50px !important;
+  border-radius: 8px;
+}
