--- a/src/app/components/chat-bar/chat-bar.component.css
+++ b/src/app/components/chat-bar/chat-bar.component.css
@@ -1,16 +1,4 @@
 
-.box-chat__content__form {
-  width: 100% !important;
-  height: 95px;
-  padding: 0px 20px;
-  margin-bottom: 100px !important;
-  position: relative;
-}
-
-.width_full {
-  width: 100% !important;
-}
-
 .custom-button {
   width: 42px;
   height: 42px;
@@ -21,9 +9,41 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  padding: 30px;
-  margin-right: 20px;
+}
 
+.custom-button__name {
+  position: absolute;
+  min-width: max-content;
+  left: 100%;
+  top: 40%;
+  padding: 5px 15px;
+  border-radius: 0 50px 50px 50px;
+  font-size: 13px;
+  letter-spacing: 1px;
+  color: white;
+  background: #223645;
+  font-weight: 500;
+  text-transform: capitalize;
+  margin-left: 5px;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 2;
+  transition: all .3s ease;
+}
+
+.custom-button:hover .custom-button__name {
+  visibility: visible;
+  opacity: 1;
+}
+
+.button-light {
+  color: #223645 !important;
+  background-color: #eff1f2 !important;
+  transition: all .3s ease;
+}
+
+.button-light:hover {
+  background-color: #d3d8db !important;
 }
 
 .button-primary {
@@ -34,23 +54,6 @@
 
 .button-primary:hover {
   background-color: rgba(28, 157, 234, .25) !important;
-}
-
-.box-chat__content__form__input {
-  flex: 1;
-  width: 500px;
-  border: #1c9dea solid 1px;
-  border-radius: 40px;
-  padding: 10px;
-  margin-right: 10px;
-}
-
-.box-chat__content__form__input input {
-  border: none !important;
-  outline: none !important;
-  width: 100%;
-  font-size: 20px;
-  color: #647589;
 }
 
 .send-button {
@@ -66,63 +69,70 @@
   border-color: #1280c1 !important;
 }
 
-.custom-button {
-  width: 42px;
-  height: 42px;
+.box-chat__content__form {
+  padding: 25px 45px;
+}
+
+.box-chat__content__form__input {
+  flex: 1;
+}
+
+.box-chat__content__form__box-images {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+  width: 100%;
+  background-color: #eff1f2;
+  border-radius: 8px;
+  padding: 12px;
+  margin-bottom: 10px;
+}
+
+.box-chat__content__form__box-images__item {
+  position: relative;
+  height: 80px;
+}
+
+.box-chat__content__form__box-images__item-remove {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: -7px;
+  right: -7px;
+  color: #ff4e2b;
+  border-radius: 50%;
+  border: 1px solid #ff4e2b;
+  background-color: #eff1f2;
+}
+
+.box-chat__content__form__box-images__item img {
+  width: auto;
+  height: 100%;
+  border-radius: 8px;
+}
+
+.box-chat__content__form__box-images__item-remove i {
+  font-size: 13px;
+}
+
+/*end images*/
+
+
+.box-chat__content__form__input input {
   border: none !important;
   outline: none !important;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  position: relative;
+  background-color: #eff1f2;
+  color: #223645;
+  border-radius: 50px;
+  padding: 10px 24px;
+  min-height: 30px;
+  width: 100%;
+  font-size: 16px;
+  /*color: #647589;*/
+  max-height: 42px;
 }
 
-.custom-button:hover .custom-button__name {
-  visibility: visible;
-  opacity: 1;
-}
-
-.day {
-  background: #eee;
-  color: black;
-}
-
-.night {
-  background: #333;
-  color: white;
-}
-
-@media (prefers-color-scheme: dark) {
-  .day.dark-scheme {
-    background: #333;
-    color: white;
-  }
-
-  .night.dark-scheme {
-    background: black;
-    color: #ddd;
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  .day.light-scheme {
-    background: white;
-    color: #555;
-  }
-
-  .night.light-scheme {
-    background: #eee;
-    color: black;
-  }
-}
-
-.day, .night {
-  display: inline-block;
-  padding: 1em;
-  width: 7em;
-  height: 2em;
-  vertical-align: middle;
-
-}
 
