--- a/src/app/components/new-contact/new-contact.component.css
+++ b/src/app/components/new-contact/new-contact.component.css
@@ -91,7 +91,7 @@
   text-align: right;
 }
 
-.new-contact__people, .new-contact__group {
+.new-contact__common {
   position: fixed;
   display: block;
   top: 0;
@@ -103,7 +103,6 @@
   background-color: #fff;
   border: 1px solid rgba(0, 0, 0, .2);
   border-radius: 10px;
-  overflow: hidden;
   z-index: 100;
   transform: translate(-50%, 0);
   transition: transform .3s ease-out, opacity .15s linear;
@@ -199,6 +198,11 @@
   position: relative;
 }
 
+.new-contact__common__form__container button:hover p {
+  visibility: visible;
+  opacity: 1;
+}
+
 .new-contact__common__form__container button p {
   position: absolute;
   top: 100%;
@@ -212,6 +216,9 @@
   font-size: 14px;
   font-weight: 500;
   border-radius: 5px;
+  visibility: hidden;
+  opacity: 0;
+  transition: all .3s ease;
 }
 
 .new-contact__common__list {
